--- a/wk2/Tutorial3/app/src/main/AndroidManifest.xml
+++ b/wk2/Tutorial3/app/src/main/AndroidManifest.xml
@@ -16,11 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity">
+
+        </activity>
         <receiver android:name=".BatteryStatusReceiver" android:enabled="true" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BATTERY_LOW"/>
-                <action android:name="android.intent.action.BATTERY_OKAY"/>
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
                 <action android:name="android.intent.action.AIRPLANE_MODE"/>
             </intent-filter>
